--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,39 @@
         <title>Map of Jobs</title>
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
         <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
-	<body ng-controller="map_of_jobs_controller">
-        <h2><strong>Map Of Jobs</strong></h2>
-        <div map-lazy-load="https://maps.google.com/maps/api/js"
-            map-lazy-load-params="{{googleMapsUrl|angular}}">
-            <ng-map center="41,-87" zoom="3"></ng-map>
+	<body ng-controller="map_of_jobs_controller" style="text-align:center">
+        <h2><strong>Map Of Jobs Test</strong></h2>
+        <div class="col-lg-12">
+            <div class="container-fluid">
+                <div class="well">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-10">
+                            <div class="row">
+                                <div class="map">
+                                    <div map-lazy-load="https://maps.google.com/maps/api/js"
+                                        map-lazy-load-params="{{googleMapsUrl|angular}}">
+                                        <ng-map center="41,-87" zoom="3"></ng-map>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button type="button" class="btn btn-secondary" ng-click="populateMap()">Generate Map</button>
+                    </div>
+                    <div class="row">
+                        <h1>Table of Houses</h1>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="{{ url_for('bower.static', filename='jquery/dist/jquery.min.js') }}"></script>
         <script src="{{ url_for('bower.static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>
