--- a/static/styles.css
+++ b/static/styles.css
@@ -1,11 +1,33 @@
 body{
-	background-color:blue;
-	text-align:center
+	background-color: #2196F3;
+	text-align:center;
 }
 
-.map{
-	width:100%;
-    position:absolute;
-    top:0;
-    padding:0;
+#map-container {
+	min-height: 300px;
+}
+
+#map, #results-list {
+	transition: ease-in-out all 0.2s;
+}
+
+#map-container.has-results #map {
+	width: 50%;
+}
+
+#map{
+	float: right;
+	height: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#map-container.has-results #results-list {
+	width: 50%;
+}
+
+#results-list {
+	width: 0%;
+	height: 100%;
+	float: left;
 }
