--- a/templates/index.html
+++ b/templates/index.html
@@ -4,45 +4,46 @@
 		<meta charset="utf-8">
         <title>Map of Jobs</title>
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
-        <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('bower.static', filename='bootstrap\\dist\\css\\bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
 	<body ng-controller="map_of_jobs_controller" style="text-align:center">
         <h2><strong>Map Of Jobs Test</strong></h2>
-        <div class="col-lg-12">
-            <div class="container-fluid">
-                <div class="well">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-10">
-                            <div class="row">
-                                <div class="map">
-                                    <div map-lazy-load="https://maps.google.com/maps/api/js"
-                                        map-lazy-load-params="{{googleMapsUrl|angular}}">
-                                        <ng-map center="41,-87" zoom="3"></ng-map>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <button type="button" class="btn btn-secondary" ng-click="populateMap()">Generate Map</button>
-                    </div>
-                    <div class="row">
-                        <h1>Table of Houses</h1>
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
+
+        <div id="map-container" ng-class="{'has-results': showing_results, '': !showing_results}">
+            <div id="results-list">
+                <h3>Results</h3>
+
+                <div ng-repeat="h in search.results">
+                    <h4>{{ h.address }}</h4>
+                    <p>{{ h.zipcode }}</p>
                 </div>
             </div>
+
+            <div id="map" map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl|angular}}">
+                <ng-map center="41,-87" zoom="3"></ng-map>
+            </div>
         </div>
-        <script src="{{ url_for('bower.static', filename='jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angular/angular.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='ngmap/build/scripts/ng-map.min.js') }}"></script>
+
+        <div id="search-container">
+            <h3>Search for housing</h3>
+
+            <div ng-submit="search.submit()">
+                <form novalidate>
+                    street: <input type="text" ng-model="search.street"><br>
+                    city: <input type="text" ng-model="search.city"><br>
+                    zip code: <input type="text" ng-model="search.zip"><br>
+
+                    <button ng-click="submit()">SUBMIT</button>
+                </form>
+            </div>
+
+        </div>
+
+        <script src="{{ url_for('bower.static', filename='jquery\\dist\\jquery.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='bootstrap\\dist\\js\\bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='angular\\angular.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='ngmap\\build\\scripts\\ng-map.min.js') }}"></script>
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyAnGj_CJuLQjEjd94i0MOvQVB4FDLRpdec"></script>
         <script src="{{ url_for('static', filename='app.js') }}"></script>
 
