--- a/static/styles.css
+++ b/static/styles.css
@@ -73,7 +73,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 	position: absolute;
 	font-size: 18px;
 	top: -12px;
-	background-color: white;
+	background-color: rgba(255,255,255,0.75);
 	border-bottom: 1px solid black;
 }
 #search-container label {
