--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
 
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
-        <link href="{{ url_for('bower.static', filename='bootstrap\\dist\\css\\bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
 	<body ng-controller="map_of_jobs_controller" style="text-align:center">
@@ -22,9 +22,28 @@
                 <h3>Results</h3>
 
                 <div ng-repeat="h in search.results">
-                    <h4>{{h.address}}</h4>
-                    <p>{{h.zipcode}}</p>
+                    <h4>{{h.address|angular}}</h4>
+                    <p>{{h.zipcode|angular}}</p>
                 </div>
+
+                <!--table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th ng-repeat="column in table_columns">{{column|angular}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr dir-paginate="result in table_reults|itemsPerPage:5">
+                            </tr>
+                            <td ng-repeat="column in table_columns" ng-bind="result[column]"></td>
+                    </tbody>
+                </table>
+                <dir-pagination-controls
+                    max-size="5"
+                    direction-links="true"
+                    boundary-links="true">
+                </dir-pagination-controls--> 
+
             </div>
 
             <div id="map" map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl|angular}}">
@@ -40,16 +59,17 @@
                     <label>city</label>     <input type="text" ng-model="search.city"><br>
                     <label>zip code</label> <input type="text" ng-model="search.zip"><br>
 
-                    <button ng-click="submit()">SUBMIT</button>
+                    <button ng-click="submit_button()">SUBMIT</button>
                 </form>
             </div>
 
         </div>
 
-        <script src="{{ url_for('bower.static', filename='jquery\\dist\\jquery.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='bootstrap\\dist\\js\\bootstrap.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angular\\angular.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='ngmap\\build\\scripts\\ng-map.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='jquery/dist/jquery.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='angular/angular.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='angularUtils-pagination/dirPagination.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='ngmap/build/scripts/ng-map.min.js') }}"></script>
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyAnGj_CJuLQjEjd94i0MOvQVB4FDLRpdec"></script>
         <script src="{{ url_for('static', filename='app.js') }}"></script>
 
