cleaned up form layout, added slash changing python script

--- a/static/styles.css
+++ b/static/styles.css
@@ -82,3 +82,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 #search-container input {
 	margin-bottom: 10px;
 }
+#search-container .search-form form {
+	column-count: 2;
+}
