--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
-        <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../static/styles.css">
+        <link href="{{ url_for('bower.static', filename='bootstrap\\dist\\css\\bootstrap.min.css') }}" rel="stylesheet">        <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
 	<body ng-controller="map_of_jobs_controller" style="text-align:center">
         <div class='site-header'>
@@ -55,10 +54,14 @@
             <div class="search-form" ng-submit="search.submit()">
                 <h3>Search for housing</h3>
                 <form novalidate>
-                    <label>location</label>   <input type="text" ng-model="search.street" placeholder="enter 'city state' or 'zip'"><br>
-                    <label>Property Types:</label>  <input type="checkbox" ng-model="search.townhouse" name="townhouse" value=1> <label for="townhouse">Townhouse</label>
+                    <label>location</label><input type="text" ng-model="search.street" placeholder="enter 'city state' or 'zip'">
+                    <br>
+                    <label>Property Types:</label>  
+                    <input type="checkbox" ng-model="search.townhouse" name="townhouse" value=1> <label for="townhouse">Townhouse</label>
                     <input type="checkbox" ng-model="search.house" name="house" value=1> <label for="house">House</label>
                     <input type="checkbox" ng-model="search.condo" name="condo" value=1> <label for="condo">Condo</label>
+                    <br>
+                    <label>Rating:</label>
                     <select ng-model="search.rating">
                         <option value=1>1</option>
                         <option value=2>2</option>
@@ -71,9 +74,13 @@
                         <option value=9>9</option>
                         <option value=10>10</option>
                     </select>
-                    <input type="number" name="beds" ng-model="search.beds" step="1" min="0"> <label for="beds">Bedrooms</label>
-                    <input type="number" name="baths" ng-model="search.baths" step="0.5" min="0"> <label for="baths">Bathrooms</label>
-                    <select ng-model = "search.price">
+                    <br>
+                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="search.beds" step="1" min="0">
+                    <br> 
+                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="search.baths" step="0.5" min="0"> 
+                    <br>
+                    <label for="price">Price range</label>
+                    <select name="price" ng-model = "search.price">
                         <option value="-50000"><50,000</option>
                         <option value="50000,100000">50,000 - 100,000</option>
                         <option value="100000,150000">100,000 - 150,000</option>
@@ -91,22 +98,17 @@
                         <option value="900000,1000000">900,000 - 1,000,000</option>
                         <option value="+1000000">1,000,000+</option>
                     </select>
-
-                    <input type="number" name="size" ng-model="search.size" step="50" min="0"> <label for="size">Minimum House Size in SqFt</label>
-
-                    <button ng-click="submit_button()">SUBMIT</button>
+                    <br>
+                    <label for="size">Minimum House Size in SqFt</label>
+                    <input type="number" name="size" ng-model="search.size" step="50" min="0"> 
+                    <br>
                 </form>
+                <button ng-click="submit_button()">SUBMIT</button>
             </div>
 
         </div>
 
-        <script src="{{ url_for('bower.static', filename='jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angular/angular.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angularUtils-pagination/dirPagination.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='ngmap/build/scripts/ng-map.min.js') }}"></script>
-        <script src="http://maps.google.com/maps/api/js?key=AIzaSyAnGj_CJuLQjEjd94i0MOvQVB4FDLRpdec"></script>
+        <script src="{{ url_for('bower.static', filename='jquery\\dist\\jquery.min.js') }}"></script>        <script src="{{ url_for('bower.static', filename='bootstrap\\dist\\js\\bootstrap.min.js') }}"></script>        <script src="{{ url_for('bower.static', filename='angular\\angular.min.js') }}"></script>        <script src="{{ url_for('bower.static', filename='angularUtils-pagination\\dirPagination.js') }}"></script>        <script src="{{ url_for('bower.static', filename='ngmap\\build\\scripts\\ng-map.min.js') }}"></script>        <script src="http://maps.google.com/maps/api/js?key=AIzaSyAnGj_CJuLQjEjd94i0MOvQVB4FDLRpdec"></script>
         <script src="{{ url_for('static', filename='app.js') }}"></script>
-
 	</body>
 </html>
