--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
             <div class="search-form"><!-- ng-submit="search.submit()"-->
                 <h3>Search for housing</h3>
                 <form novalidate>
-                    <label>location</label><input type="text" ng-model="search.street" placeholder="enter 'city state' or 'zip'">
+                    <label>location</label><input type="text" ng-model="location" width=100px placeholder="enter 'city state' 'state' or 'zip'">
 +                   <br>
 +                   <label>Property Types:</label>
                     <input type="checkbox" ng-model="townhouse" name="townhouse" value=1> <label for="townhouse">Townhouse</label>
@@ -86,13 +86,12 @@
                         <option value=10>10</option>
                     </select>
                     <br>
-+                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="search.beds" step="1" min="0">
++                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="beds" step="1" min="0">
 +                    <br>
-+                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="search.baths" step="0.5" min="0">
++                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="baths" step="0.5" min="0">
 +                    <br>
 +                    <label for="price">Price range</label>
-+                    <select name="price" ng-model = "search.price">
-                    <select ng-model = "price">
++                    <select name="price" ng-model = "price">
                         <option value="0,50000"><$50,000</option>
                         <option value="50000,100000">$50,000 - $100,000</option>
                         <option value="100000,150000">$100,000 - $150,000</option>
@@ -113,7 +112,7 @@
 
                     <br>
 +                   <label for="size">Minimum House Size in SqFt</label>
-+                   <input type="number" name="size" ng-model="search.size" step="50" min="0">
++                   <input type="number" name="size" ng-model="size" step="50" min="0">
 +                   <br>
                     <button ng-click="submit_button()">SUBMIT</button>
                 </form>
