--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
-        <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('bower.static', filename='bootstrap\\dist\\css\\bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
 	<body ng-controller="map_of_jobs_controller" style="text-align:center">
@@ -66,8 +66,8 @@
                 <h3>Search for housing</h3>
                 <form novalidate>
                     <label>location</label><input type="text" ng-model="location" width=100px placeholder="enter 'city state' 'state' or 'zip'">
-+                   <br>
-+                   <label>Property Types:</label>
+                   <br>
+                   <label>Property Types:</label>
                     <input type="checkbox" ng-model="townhouse" name="townhouse" value=1> <label for="townhouse">Townhouse</label>
                     <input type="checkbox" ng-model="house" name="house" value=1> <label for="house">House</label>
                     <input type="checkbox" ng-model="condo" name="condo" value=1> <label for="condo">Condo</label>
@@ -86,12 +86,12 @@
                         <option value=10>10</option>
                     </select>
                     <br>
-+                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="beds" step="1" min="0">
-+                    <br>
-+                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="baths" step="0.5" min="0">
-+                    <br>
-+                    <label for="price">Price range</label>
-+                    <select name="price" ng-model = "price">
+                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="beds" step="1" min="0">
+                    <br>
+                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="baths" step="0.5" min="0">
+                    <br>
+                    <label for="price">Price range</label>
+                    <select name="price" ng-model = "price">
                         <option value="0,50000"><$50,000</option>
                         <option value="50000,100000">$50,000 - $100,000</option>
                         <option value="100000,150000">$100,000 - $150,000</option>
@@ -111,20 +111,20 @@
                     </select>
 
                     <br>
-+                   <label for="size">Minimum House Size in SqFt</label>
-+                   <input type="number" name="size" ng-model="size" step="50" min="0">
-+                   <br>
+                   <label for="size">Minimum House Size in SqFt</label>
+                   <input type="number" name="size" ng-model="size" step="50" min="0">
+                   <br>
                     <button ng-click="submit_button()">SUBMIT</button>
                 </form>
             </div>
 
         </div>
 
-        <script src="{{ url_for('bower.static', filename='jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angular/angular.min.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='angularUtils-pagination/dirPagination.js') }}"></script>
-        <script src="{{ url_for('bower.static', filename='ngmap/build/scripts/ng-map.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='jquery\\dist\\jquery.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='bootstrap\\dist\\js\\bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='angular\\angular.min.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='angularUtils-pagination\\dirPagination.js') }}"></script>
+        <script src="{{ url_for('bower.static', filename='ngmap\\build\\scripts\\ng-map.min.js') }}"></script>
         <script src="http://maps.google.com/maps/api/js?key=AIzaSyAnGj_CJuLQjEjd94i0MOvQVB4FDLRpdec"></script>
         <script src="{{ url_for('static', filename='app.js') }}"></script>
 
