trying to add markers

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <link href="{{ url_for('bower.static', filename='bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../static/styles.css">
 	</head>
-	<body ng-controller="map_of_jobs_controller" style="text-align:center">
+	<body ng-controller="map_of_jobs_controller as vm" style="text-align:center;margin:0;">
         <div class='site-header'>
             <h2>Realty Map Filter</h2>
             <h5>developed by <i>/* No Comment */</i></h5>
@@ -20,7 +20,12 @@
         <div id="map-container">
 
             <div id="map" map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl|angular}}">
-                <ng-map center="41,-87" zoom="3"></ng-map>
+                <ng-map center="41,-87" zoom="3">
+                    <marker ng-repeat="m in vm.mymarkers"
+                            position="{{m.pos}}"
+                            data="{{m.address}}"
+                            title="pos: {{m.pos}}"></marker>
+                </ng-map>
             </div>
         </div>
 
@@ -29,12 +34,11 @@
                 <h3>Search for housing</h3>
                 <form novalidate>
                     <label>location</label><input type="text" ng-model="location" size="50" placeholder="enter 'city state', 'state' or 'zip'">
-
                     <br>
                     <label>Property Types:</label>
-                    <input type="checkbox" ng-model="townhouse" name="townhouse" value=1> <label for="townhouse">Townhouse</label>
-                    <input type="checkbox" ng-model="house" name="house" value=1> <label for="house">House</label>
-                    <input type="checkbox" ng-model="condo" name="condo" value=1> <label for="condo">Condo</label>
+                    <input type="checkbox" ng-model="townhouse" name="townhouse" value='true'> <label for="townhouse">Townhouse</label>
+                    <input type="checkbox" ng-model="house" name="house" value='true'> <label for="house">House</label>
+                    <input type="checkbox" ng-model="condo" name="condo" value='true'> <label for="condo">Condo</label>
                     <br>
                     <label>School Rating</label>
                     <select ng-model="rating">
@@ -50,13 +54,12 @@
                         <option value=10>10</option>
                     </select>
                     <br>
-
-                    <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="beds" step="1" min="0">
-                    <br>
-                    <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="baths" step="0.5" min="0">
-                    <br>
-                    <label for="price">Price range</label>
-                    <select name="price" ng-model = "price">
+                     <label for="beds">Bedrooms</label><input type="number" name="beds" ng-model="beds" step="1" min="0">
+                     <br>
+                     <label for="baths">Bathrooms</label><input type="number" name="baths" ng-model="baths" step="0.5" min="0">
+                     <br>
+                     <label for="price">Price range</label>
+                     <select name="price" ng-model = "price">
                         <option value="0,100000"><$100,000</option>
                         <option value="100000,200000">$100,000 - $200,000</option>
                         <option value="200000,400000">$200,000 - $400,000</option>
@@ -67,9 +70,9 @@
                     </select>
 
                     <br>
-                   <label for="size">Minimum House Size in SqFt</label>
-                   <input type="number" name="size" ng-model="size" step="50" min="0">
-                   <br>
+                    <label for="size">Minimum House Size in SqFt</label>
+                    <input type="number" name="size" ng-model="size" step="50" min="0">
+                    <br>
                     <button ng-click="submit_button()">SUBMIT</button>
                 </form>
             </div>
