--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div class="search-form"><!-- ng-submit="search.submit()"-->
                 <h3>Search for housing</h3>
                 <form novalidate>
-                    <label>location</label><input type="text" ng-model="location" size="70" placeholder="enter 'address', 'neighborhood', 'city state', 'state' or 'zip'">
+                    <label>location</label><input type="text" ng-model="location" size="70" placeholder="enter 'address', 'neighborhood', 'city, state', 'state' or 'zip'">
                     <br>
                     <label>Property Types:</label>
                     <input type="checkbox" ng-model="townhouse" name="townhouse" value='true'> <label for="townhouse">Townhouse</label>
